2015-01-21  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Various improvements.

	* arrays/generic/stk_feval.m: Update documentation. Try to make
	the code clearer. Use stk_disp_progress.

	stk_disp_progress.m: Display a progress indicator.

	* misc/text/stk_disp_progress.m: New function that displays a
	textual progress indicator.

2015-01-21  Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>

	stk_feval.m: Generalize to the case of a cell array of functions

	* arrays/generic/stk_feval.m: Generalize to the case of a cell
	array of functions (ticket #19 closed).

2015-01-08  Julien Bect  <julien.bect@supelec.fr>

	Improve conditional simulation examples.

	* examples/01_kriging_basics/stk_example_kb05.m: Add documentation.
	* examples/01_kriging_basics/stk_example_kb09.m: New example.

	stk_generate_samplepaths.m: Fix conditioning on noisy observations

	* utils/stk_generate_samplepaths.m: Fix conditioning on noisy
	observations, which was not implemented properly until now.

	stk_conditioning.m: Implement conditioning on noisy observations

	* utils/stk_conditioning.m: Simulate sample paths conditioned on
	noisy observations when the additional NOISE_SIM argument is
	provided.

2015-01-07  Julien Bect  <julien.bect@supelec.fr>

	stk_generate_samplepaths.m: Do not simulate observation noise.

	* utils/stk_generate_samplepaths.m: Do not add observation noise
	to the generated sample paths. This is consistent with
	stk_predict, which returns posterior variances for the unknown
	function, not for future noisy observations.

2014-12-31  Julien Bect  <julien.bect@supelec.fr>

	Accept empty dim in sampling functions.

	* sampling/stk_sampling_halton_rr2.m: Accept empty dim argument
	when box is provided, in which case dim is guessed from the
	dimension of box if provided, and defaults to one otherwise.
	* sampling/stk_sampling_maximinlhs.m: Idem.
	* sampling/stk_sampling_olhs.m: Idem.
	* sampling/stk_sampling_randomlhs.m: Idem.