@@ -19,11 +19,23 @@
 %
 %    generates NB_PATHS conditional sample paths at once.
 %
-% NOTE:
+% NOTE: Sample size limitation
 %
 %    This function generates (discretized) sample paths using a Cholesky
 %    factorization of the covariance matrix, and is therefore restricted to
 %    moderate values of the number of evaluation points.
+%
+% NOTE: Output type
+%
+%    The output argument ZSIM will be an stk_dataframe if at least one of the
+%    following conditions is met:
+%
+%      a) the MODEL structure has a non-empty char field named 'response_name';
+%
+%      b) one of the input arguments XT, XI or ZI is an stk_dataframe object.
+%
+%    If both MODEL.response_name and ZI.colnames exist and are non-empty, they
+%    must be equal (if they are not, ZSIM.colnames is empty).
 %
 % EXAMPLES: see stk_example_kb05, stk_example_kb07
 %
@@ -31,10 +43,11 @@
 
 % Copyright Notice
 %
+%    Copyright (C) 2015 CentraleSupelec
 %    Copyright (C) 2011-2014 SUPELEC
 %
-%    Authors:   Julien Bect       <julien.bect@supelec.fr>
-%               Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>
+%    Authors:  Julien Bect       <julien.bect@supelec.fr>
+%              Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>
 
 % Copying Permission Statement
 %
@@ -57,6 +70,9 @@
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
 function zsim = stk_generate_samplepaths (model, varargin)
+
+% Note: we know that none of the input argument is an stk_dataframe object
+%  (otherwise we would have ended up in @stk_dataframe/stk_generate_samplepaths)
 
 switch nargin,
     
@@ -107,7 +123,7 @@ end
 %--- Generate unconditional sample paths --------------------------------------
 
 % Pick unique simulation points
-[xt_unique, i_ignore, j] = unique (double (xt), 'rows');  %#ok<ASGLU>
+[xt_unique, i_ignore, j] = unique (xt, 'rows');  %#ok<ASGLU>
 
 % Did we actually find duplicates in xt ?
 duplicates_detected = (size (xt_unique, 1) < size (xt, 1));
@@ -125,34 +141,10 @@ end
 V = stk_cholcov (K);
 
 % Generates samplepaths
-zsim_data = V' * randn (size (K, 1), nb_paths);
+zsim = V' * randn (size (K, 1), nb_paths);
 
 % Duplicate simulated values, if necessary
-if duplicates_detected,  zsim_data = zsim_data(j, :);  end
-
-% output column names
-try
-    response_name = model.response_name;
-    assert (isempty (response_name) || ischar (response_name));
-    if ~ isempty (response_name)
-        if nb_paths == 1,
-            zsim_colnames = {response_name};
-        else
-            zsim_colnames = arrayfun ( ...
-                @(i)(sprintf ('%s_%d', response_name, i)), ...
-                1:nb_paths, 'UniformOutput', false);
-        end
-    end
-catch
-    zsim_colnames = {};
-end
-
-% output row names
-try
-    zsim_rownames = xt.rownames;
-catch
-    zsim_rownames = {};
-end
+if duplicates_detected,  zsim = zsim(j, :);  end
 
 
 %--- Generate conditional sample paths ----------------------------------------
@@ -171,7 +163,7 @@ if conditional,
     if model.lognoisevariance == -inf,
         
         % Simulate sample paths conditioned on noiseless observations
-        zsim_data = stk_conditioning (lambda, zi, zsim_data, xi_ind);
+        zsim = stk_conditioning (lambda, zi, zsim, xi_ind);
         
     else % Noisy case
         
@@ -186,23 +178,37 @@ if conditional,
         end
         
         % Simulate sample paths conditioned on noisy observations
-        zsim_data = stk_conditioning (lambda, zi, zsim_data, xi_ind, noise_sim);
+        zsim = stk_conditioning (lambda, zi, zsim, xi_ind, noise_sim);
         
     end
     
-    zsim_data(xi_ind, :) = [];
+    % TEMPORARY FIX (until stk_conditioning is fixed as well)
+    zsim = double (zsim);
+    
+    zsim(xi_ind, :) = [];
     
 end
 
 
-%--- The end ------------------------------------------------------------------
+%--- stk_dataframe output ?  --------------------------------------------------
 
-% store the result in a dataframe
-zsim = stk_dataframe (zsim_data, zsim_colnames, zsim_rownames);
+try %#ok<TRYNC>
+    
+    response_name = model.response_name;
+    assert ((~ isempty (response_name)) && (ischar (response_name)));
+    
+    if nb_paths == 1,
+        zsim_colnames = {response_name};
+    else
+        zsim_colnames = arrayfun ( ...
+            @(i)(sprintf ('%s_%d', response_name, i)), ...
+            1:nb_paths, 'UniformOutput', false);
+    end
+    
+    zsim = stk_dataframe (zsim, zsim_colnames);
+end
 
 end % function stk_generate_samplepaths
-
-%#ok<*CTCH>
 
 
 %!shared model xi zi xt n nb_paths
